; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/tests/gen/extr_wordexp_test.c_chld_handler.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/tests/gen/extr_wordexp_test.c_chld_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i32 0, align 4
@WNOHANG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @chld_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @chld_handler(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = load i32, i32* @errno, align 4
  store i32 %6, i32* %4, align 4
  br label %7

7:                                                ; preds = %11, %1
  %8 = load i32, i32* @WNOHANG, align 4
  %9 = call i64 @waitpid(i32 -1, i32* %3, i32 %8)
  %10 = icmp sgt i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %7
  br label %7

12:                                               ; preds = %7
  %13 = load i32, i32* %4, align 4
  store i32 %13, i32* @errno, align 4
  ret void
}

declare dso_local i64 @waitpid(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
